@@ -14,6 +14,7 @@ URL: https://docs.ropensci.org/opencv,  https://opencv.org (upstream) https://gi
 BugReports: https://github.com/ropensci/opencv/issues
 LinkingTo: Rcpp
 Imports: Rcpp, magrittr
+Suggests: grDevices
 LazyData: true
 Encoding: UTF-8
 RoxygenNote: 7.1.1
