@@ -2,6 +2,7 @@
 
 S3method(print,"opencv-image")
 export("%>%")
+export(ocv_bbox)
 export(ocv_bitmap)
 export(ocv_blur)
 export(ocv_copyto)
@@ -10,6 +11,7 @@ export(ocv_display)
 export(ocv_edges)
 export(ocv_face)
 export(ocv_facemask)
+export(ocv_grayscale)
 export(ocv_hog)
 export(ocv_info)
 export(ocv_keypoints)
@@ -17,6 +19,7 @@ export(ocv_knn)
 export(ocv_markers)
 export(ocv_mog2)
 export(ocv_picture)
+export(ocv_polygon)
 export(ocv_read)
 export(ocv_rectangle)
 export(ocv_resize)
