@@ -21,6 +21,7 @@
 \alias{ocv_copyto}
 \alias{ocv_display}
 \alias{ocv_video}
+\alias{ocv_grayscale}
 \alias{ocv_version}
 \title{OpenCV Computer Vision}
 \usage{
@@ -63,6 +64,8 @@ ocv_copyto(image, target, mask)
 ocv_display(image)
 
 ocv_video(filter)
+
+ocv_grayscale(image)
 
 ocv_version()
 }
