@@ -1,6 +1,10 @@
 0.2
   - Add ocv_rectangle
+  - Add ocv_polygon
+  - Add ocv_bbox
   - Add ocv_keypoints for keypoint detection using FAST, Harris
+  - Add ocv_grayscale
+  - Add ocv_version
 
 0.1
   - Initial CRAN release
